# squirrel_servo_control

./: CMakeLists.txt  README.md  package.xml  setup.py  squirrel_servo_node.py  teensy_python_interface.py  test.launch
launch/: control_node.launch  test.launch
msg/: motor_speed.msg  servo_calibrate_zero.msg  servo_enable_torque.msg  servo_feedback.msg  servo_position.msg  servo_speed.msg
nodes/: squirrel_servo_node.py
scripts/: teensy_python_interface.py
servo_control/: CMakeLists.txt  README.md  package.xml  teensy_python_interface.py
servo_control/launch/: test.launch
servo_control/src/: rainbow_led_node.cpp
src/: servo_test_node.py  squirrel_servo_node.py  teensy_python_interface.py
src/scripts/: packet_structs.py  teensy_python_interface.py
