<?xml version="1.0"?>
<package format="2">
  <name>squirrel_servo_control</name>
  <version>0.0.0</version>
  <description>The squirrel_servo_control package</description>

  <maintainer email="a.e.lang@student.tudelft.nl">Anton Lang</maintainer>
  <license>MIT</license>
  
    <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
