<?xml version="1.0"?>
<package format="2">
  <name>servo_control</name>
  <version>0.0.0</version>
  <description>The servo_control package</description>

  <maintainer email="a.e.lang@student.tudelft.nl">Anton Lang</maintainer>
  <license>MIT</license>
  
    <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
